# mpl-analyzer

./: AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md
crates/mpl-cli/: Cargo.toml  README.md
crates/mpl-cli/src/: main.rs
crates/mpl-hir/: Cargo.toml  README.md
crates/mpl-hir/src/: lib.rs  lower.rs  model.rs  stdlib.rs  validate.rs
crates/mpl-hir/tests/: diagnostics.rs  lower.rs
crates/mpl-hir/tests/snapshots/: diagnostics__accepts_join_like_mplc.snap  diagnostics__accepts_replace_like_mplc.snap  diagnostics__hints_to_remove_unnecessary_identifier_backticks.snap  diagnostics__hints_to_replace_deprecated_filter.snap  diagnostics__keeps_backticks_required_by_identifier_syntax.snap  diagnostics__known_functions_and_builtin_interval_are_accepted.snap  diagnostics__public_example_constructs_are_accepted.snap  diagnostics__real_indented_sample_is_clean.snap  diagnostics__real_indented_sample_only_reports_filter_hint.snap  diagnostics__rejects_cumulative_histogram_without_conversion_like_mplc.snap  diagnostics__rejects_delta_histogram_conversion_like_mplc.snap  diagnostics__rejects_invalid_time_unit_like_mplc.snap  diagnostics__rejects_join_without_from_like_mplc.snap  diagnostics__rejects_replace_without_pattern_like_mplc.snap  diagnostics__rejects_unknown_pipe_keyword_like_mplc.snap  diagnostics__rejects_unresolved_source_parameter_like_mplc.snap  diagnostics__semantic_diagnostics.snap  diagnostics__syntax_diagnostics_pass_through.snap  diagnostics__unknown_functions_are_checked_by_category.snap  diagnostics__warns_about_declared_param_using_system_prefix.snap  diagnostics__warns_about_lowercase_duration_param_type.snap  diagnostics__warns_to_replace_deprecated_filter.snap  lower__lowers_compute_query_shape.snap  lower__lowers_public_query_shape.snap
crates/mpl-ide/: Cargo.toml  README.md
crates/mpl-ide/src/: analysis.rs  lib.rs
crates/mpl-ide/tests/: analysis.rs
crates/mpl-ide/tests/snapshots/: analysis__completes_align_functions.snap  analysis__completes_align_params.snap  analysis__completes_bucket_functions.snap  analysis__completes_comparison_literals.snap  analysis__completes_comparison_literals_with_following_lines.snap  analysis__completes_compute_functions.snap  analysis__completes_functions_by_using_context.snap  analysis__completes_group_functions.snap  analysis__completes_map_functions_after_using.snap  analysis__completes_map_functions_directly.snap  analysis__completes_pipe_keywords.snap  (+50 more)
crates/mpl-lsp/: Cargo.toml  README.md
crates/mpl-lsp/src/: lib.rs  main.rs
crates/mpl-syntax/: Cargo.toml  README.md
crates/mpl-syntax/src/: format.rs  lexer.rs  lib.rs  parser.rs  syntax.rs  text.rs
crates/mpl-syntax/tests/: snapshots.rs
(+18 files in other folders)
