[workspace]
resolver = "3"
members = [
    "crates/mpl-cli",
    "crates/mpl-code-render",
    "crates/mpl-hir",
    "crates/mpl-ide",
    "crates/mpl-lsp",
    "crates/mpl-syntax",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
license      = "MIT"
rust-version = "1.94.1"
authors      = ["Samuel Cristobal <samu@messy.page>"]

[workspace.dependencies]
mpl-code-render = { path = "crates/mpl-code-render" }
mpl-hir     = { path = "crates/mpl-hir" }
mpl-ide     = { path = "crates/mpl-ide" }
mpl-lsp     = { path = "crates/mpl-lsp" }
mpl-syntax  = { path = "crates/mpl-syntax" }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

display_tree = "1.1.2"
insta        = "1.43.2"
miette       = { version = "7.6.0", features = ["fancy"] }
ron          = "0.8.1"
unicode-width = "0.2.2"
