[package]
name = "mpl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "mpl-analyzer"
path = "src/main.rs"

[dependencies]
mpl-ide.workspace = true
mpl-syntax.workspace = true
serde_json.workspace = true

