[package]
name = "mpl-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "mpl-lsp"
path = "src/main.rs"

[dependencies]
mpl-ide.workspace = true
serde_json.workspace = true

lsp-server  = "0.7.9"
lsp-types   = "0.97.0"
